--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.lcl.DemoTest</groupId>
+  <groupId>com.lcl</groupId>
   <artifactId>DemoTest</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>DemoTest</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
@@ -68,8 +67,6 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.8.1</version>
     </dependency>
-
-
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -96,10 +93,6 @@
       <artifactId>easyexcel</artifactId>
       <version>2.1.4</version>
     </dependency>
-
-
-
-
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
@@ -115,6 +108,13 @@
       <artifactId>httpmime</artifactId>
       <version>4.5.10</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>5.0.0.Alpha2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
