--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
       <version>1.16.20</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>29.0-jre</version>
+    </dependency>
 
     <dependency>
       <groupId>org.jsoup</groupId>
