--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
       <version>5.0.0.Alpha2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.openjdk.jol</groupId>
+      <artifactId>jol-core</artifactId>
+      <version>0.16</version>
+    </dependency>
+
   </dependencies>
 
   <build>
